--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
-aria2:
-    image: ndthuan/aria2-alpine
+version: "3.8"
+services:
+  webui:
+    build:
+      context: "./"
+      dockerfile: ".docker/Dockerfile"
+    image: webui-aria2
+    restart: unless-stopped
     volumes:
-        - $HOME/Downloads:/downloads
+      - ${DOWNLOAD_DIR_PATH}:/data/downloads
+      - ${CONFIG_DIR_PATH}:/home/aria/.aria2
     ports:
-        - "6800:6800"
-
-httpd:
-    image: busybox
-    volumes:
-        - ./:/usr/html
-    ports:
-        - "80:80"
-    command: /bin/busybox httpd -f -p 80 -h /usr/html
+      - ${ARIA2_PORT}:6800
+      - ${WEBUI_PORT}:8080
