--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack -d --watch --progress & node node-server",
-    "start:docker": "docker compose",
+    "start:docker": "docker-compose up -d",
     "build": "webpack -p --progress",
     "analyze": "webpack -p --profile --json > stats.json && webpack-bundle-analyzer stats.json ./docs -p 9999",
     "format": "prettier -l --write  \"**/*{js,scss}\" "
